# mischwald

./: README.md
mischwald-rs/: Cargo.toml
mischwald-rs/src/: bedingung.rs  datentypen.rs  effekt.rs  lib.rs  punkteffekt.rs  spieler.rs  spiellogik.rs  spielstand.rs
mischwald-rs/src/karten/: alpin.rs  hauptspiel.rs  mod.rs  waldrand.rs
mischwald-rs/src/karten/alpin/: einzelkarten.rs
mischwald-rs/src/karten/hauptspiel/: einzelkarten.rs
mischwald-rs/src/karten/waldrand/: einzelkarten.rs
