[package]
name = "mischwald-rs"
license = "AGPL-3.0"
version = "0.1.0"
authors = ["Christoph Lemannczick"]
edition = "2024"
description = "Implementierung der Spiellogik des Spiels „Mischwald“"
readme = "README.md"

[dependencies]
smallvec = { version = "1.15.1", features = ["const_generics"] }
rand = "0.9.2"
